2008-08-27  Nick Treleaven  <nick.treleaven<at>btinternet.com>

 * src/highlighting.c, src/plugindata.h, src/filetypes.c,
   src/filetypes.h, src/symbols.c, THANKS, tagmanager/parsers.h,
   tagmanager/c.c, data/filetypes.glsl, data/filetype_extensions.conf:
   Add OpenGL Shader Language (GLSL) filetype (patch from Colomban
   Wendling, thanks; closes #2060961).
 * src/filetypes.c, src/filetypes.h:
   Add GeanyFiletypeGroupID enum and GeanyFiletype::group field.
 * src/keyfile.c, doc/geany.txt, doc/geany.html:
   Change hidden pref scroll_stop_at_last_line to TRUE (#2030914).


2008-08-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Add assert statements to check that the StyleSet styling arrays are
   not exceeded.
   Make highlighting_get_style() work with all filetypes.
 * src/highlighting.c, src/highlighting.h, src/plugindata.h:
   Rename HighlightingStyle to GeanyLexerStyle.
   Add dox for highlighting_get_style(), GeanyLexerStyle, mentioning
   SCI_STYLEGETFORE.
 * src/filetypes.c:
   Use pointer in init_builtin_filetypes() instead of repeating
   filetypes[GEANY_FILETYPES_X]->... on each line.


2008-08-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c, src/editor.c, src/editor.h:
   Add editor_destroy() to dispose of a GeanyEditor struct (in future
   we may want to do more than just free it).
   Fix editor.h dox description to be more informative for the API
   (and move dox from editor.h to editor.c).


2008-08-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix not using auto-completion in strings and comments (patch by
   Jason Oster, thanks; fixes #2057979).
 * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
   Don't disable 'Detect from file' indent type pref when 'Tabs and
   Spaces' is selected.
 * src/document.c:
   Don't warn about a missing file on disk more than once (otherwise